--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.7",
     "i18next": "^23.4.4",
     "i18next-browser-languagedetector": "^7.1.0",
+    "luxon": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.1.0",
